<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemPicture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemLeiras"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemAr"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonKosar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#8BC34A"
                android:text="@string/kos_rba"
                android:textColor="#3F51B5" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>